--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,5 @@
-[package]
-name = "unsafe_tut"
-version = "0.1.0"
-authors = ["Abhishek Patel <5524161+Abhishek8394@users.noreply.github.com>"]
-edition = "2018"
-
-[lib]
-name = "unsafe_tut"
-crate-type = ["staticlib", "cdylib"]
-
-
-[dependencies]
-
 [workspace]
+members= [
+    "core",
+    "app"
+]
