--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Abhishek Patel <5524161+Abhishek8394@users.noreply.github.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["staticlib", "cdylib", "rlib"]
+crate-type = ["cdylib", "rlib"]
